--- a/network_modeling/chapter_2.tex
+++ b/network_modeling/chapter_2.tex
@@ -316,11 +316,11 @@
 			\item Let's prove the following inequality:
 			$$ \prod_{i=j}^m(1-p_i) > 1-\sum_{i=j}^m p_i \quad \forall m \ge j+1$$
 			We can prove it recursively:
-			$$(1-p_j)(1-p_{j+1}) = 1-p_j - p_{j+1} + p_jp_{j+1} > 1-p_j - p_{j+1}$$
+			$$(1-p_j)(1-P_{j+1}) = 1-p_j - P_{j+1} + p_jP_{j+1} > 1-p_j - P_{j+1}$$
 			Iterating we obtain:
 			\begin{eqnarray*}
-				\prod_{i=j}^{m+1}(1-p_i) = (1-p_{m+1})\prod_{i=j}^m(1-p_i) > (1-p_{m+1})(1-\sum_{i=j}^m p_i) = \\
-				1- \sum_{i=j}^{m+1} p_i + p_{m+1}\sum_{i=j}^m p_i
+				\prod_{i=j}^{m+1}(1-p_i) = (1-P_{m+1})\prod_{i=j}^m(1-p_i) > (1-P_{m+1})(1-\sum_{i=j}^m p_i) = \\
+				1- \sum_{i=j}^{m+1} p_i + P_{m+1}\sum_{i=j}^m p_i
 			\end{eqnarray*}
 			Assume now that $\sum_{i=1}^\infty p_i < \infty$, then there must exist an index $j>1$ s.t. $\sum_{i=j}^\infty p_i < 1$. \\
 			Then we have:
@@ -349,17 +349,17 @@
 	\begin{theorem}[3.1, KT p. 91] \label{th:3.1}
 		Given state $j \in C$, an aperiodic and recurrent class, and a transient state $i \notin C$, it holds that
 
-		$$ \lim_{n \to \infty } p_{ij}^{(n)} = \pi_i(C) ~ \lim_{n \to \infty } p_{jj}^{(n)} = \pi_i(C) ~ \pi_j $$
+		$$ \lim_{n \to \infty } P_{ij}^{(n)} = \pi_i(C) ~ \lim_{n \to \infty } P_{jj}^{(n)} = \pi_i(C) ~ \pi_j $$
 	\end{theorem}
 	---
 	\begin{proof}
 		The limit of theorem thesis can be expanded this way
 		\begin{equation}\begin{split} \label{eq:theorem_3.1_thesis}
 			& \forall \epsilon > 0, \exists \text{ class } C', N'>N \text{ such that } \\
-			& \forall n \ge N,~ \left| p_{ij}^{(n)} - \pi_i(C) \pi_j \right| \stackrel{(1)}{=} \\
-			= & \left| p_{ij}^{(n)} - \left( \sum_{v = 1}^{N} \sum_{k \in C'} \pi_{ik}^{(v)}(C) \right) \pi_j +
+			& \forall n \ge N,~ \left| P_{ij}^{(n)} - \pi_i(C) \pi_j \right| \stackrel{(1)}{=} \\
+			= & \left| P_{ij}^{(n)} - \left( \sum_{v = 1}^{N} \sum_{k \in C'} \pi_{ik}^{(v)}(C) \right) \pi_j +
 				\left( \sum_{v = 1}^{N} \sum_{k \in C'} \pi_{ik}^{(v)}(C)\right)\pi_j - \pi_i(C)\pi_j \right| \stackrel{(2)}{\le} \\
-			\le & \left| p_{ij}^{(n)} - \left( \sum_{v = 1}^{N} \sum_{k \in C'} \pi_{ik}^{(v)}(C) \right) \pi_j \right| +
+			\le & \left| P_{ij}^{(n)} - \left( \sum_{v = 1}^{N} \sum_{k \in C'} \pi_{ik}^{(v)}(C) \right) \pi_j \right| +
 				\left| \left( \sum_{v = 1}^{N} \sum_{k \in C'} \pi_{ik}^{(v)}(C)\right) - \pi_i(C) \right| \pi_j
 		\end{split}\end{equation}
 		where
@@ -373,33 +373,33 @@
 
 		First we can prove that, given class $C$ is recurrent, transition probability in $n$ steps from $i$ to $j$ can be formulated as follows.
 		\begin{equation} \label{eq:n_step_in_class}
-			p_{ij}^{(n)} = \sum_{v = 1}^{n} \sum_{k \in C} \pi_{ik}^{(v)}(C) ~ p_{kj}^{(n-v)}
+			P_{ij}^{(n)} = \sum_{v = 1}^{n} \sum_{k \in C} \pi_{ik}^{(v)}(C) ~ P_{kj}^{(n-v)}
 		\end{equation}
 		where path from $i$ to $j$ is splitted in two parts, before and after entering $C$.
 
 		This formula can be written as a limit in $n$ and $C$, expliciting the inner infinite sum over class elements.
 		\begin{equation}\begin{split} \label{eq:theorem_3.1_first term}
 			& \forall \epsilon > 0, \exists N \in \mathbb{N} \text{ and a finite class } C' \subseteq C \text{ such that } \\
-			& \forall n \ge N, \left| p_{ij}^{(n)} - \pi_j \left( \sum_{v = 1}^{n} \sum_{k \in C'} \pi_{ik}^{(v)} \right) \right| \stackrel{(1)}{=}
+			& \forall n \ge N, \left| P_{ij}^{(n)} - \pi_j \left( \sum_{v = 1}^{n} \sum_{k \in C'} \pi_{ik}^{(v)} \right) \right| \stackrel{(1)}{=}
 			\\
 			= & \left|
 				\left(
-					\sum_{v = 1}^{n} \sum_{k \in C'} \pi_{ik}^{(v)}(C) ~ p_{kj}^{(n-v)} + \sum_{v = 1}^{n} \sum_{\substack{k \in C \\ k \notin C'}} \pi_{ik}^{(v)}(C) ~ p_{kj}^{(n-v)} \right)
+					\sum_{v = 1}^{n} \sum_{k \in C'} \pi_{ik}^{(v)}(C) ~ P_{kj}^{(n-v)} + \sum_{v = 1}^{n} \sum_{\substack{k \in C \\ k \notin C'}} \pi_{ik}^{(v)}(C) ~ P_{kj}^{(n-v)} \right)
 				- \pi_j \left( \sum_{v = 1}^{n} \sum_{k \in C'} \pi_{ik}^{(v)}(C) \right)
 				\right| \stackrel{(2)}{=}
 			\\
-			= & \left| \sum_{v = 1}^{n} \sum_{k \in C'} \pi_{ik}^{(v)}(C) (p_{kj}^{(n-v)} - \pi_j)
-				+ \sum_{v = 1}^{n} \sum_{\substack{k \in C \\ k \notin C'}} \pi_{ik}^{(v)}(C) p_{kj}^{(n-v)} \right| \stackrel{(3)}{=}
+			= & \left| \sum_{v = 1}^{n} \sum_{k \in C'} \pi_{ik}^{(v)}(C) (P_{kj}^{(n-v)} - \pi_j)
+				+ \sum_{v = 1}^{n} \sum_{\substack{k \in C \\ k \notin C'}} \pi_{ik}^{(v)}(C) P_{kj}^{(n-v)} \right| \stackrel{(3)}{=}
 			\\
-			= & \left| \sum_{v = 1}^{N} \sum_{k \in C'} \pi_{ik}^{(v)}(C) (p_{kj}^{(n-v)} - \pi_j) +
-				\sum_{v = N+1}^{n} \sum_{k \in C'} \pi_{ik}^{(v)}(C) (p_{kj}^{(n-v)} - \pi_j) +
-				\sum_{v = 1}^{n} \sum_{\substack{k \in C \\ k \notin C'}} \pi_{ik}^{(v)}(C) p_{kj}^{(n-v)} \right| \stackrel{(4)}{\le}
+			= & \left| \sum_{v = 1}^{N} \sum_{k \in C'} \pi_{ik}^{(v)}(C) (P_{kj}^{(n-v)} - \pi_j) +
+				\sum_{v = N+1}^{n} \sum_{k \in C'} \pi_{ik}^{(v)}(C) (P_{kj}^{(n-v)} - \pi_j) +
+				\sum_{v = 1}^{n} \sum_{\substack{k \in C \\ k \notin C'}} \pi_{ik}^{(v)}(C) P_{kj}^{(n-v)} \right| \stackrel{(4)}{\le}
 			\\
-			\le & \left| \sum_{v = 1}^{N} \sum_{k \in C'} \pi_{ik}^{(v)}(C) (p_{kj}^{(n-v)} - \pi_j) \right| +
-				\left| \sum_{v = N+1}^{n} \sum_{k \in C'} \pi_{ik}^{(v)}(C) (p_{kj}^{(n-v)} - \pi_j) \right| +
-				\left| \sum_{v = 1}^{n} \sum_{\substack{k \in C \\ k \notin C'}} \pi_{ik}^{(v)}(C) p_{kj}^{(n-v)} \right| \stackrel{(5)}{\le}
+			\le & \left| \sum_{v = 1}^{N} \sum_{k \in C'} \pi_{ik}^{(v)}(C) (P_{kj}^{(n-v)} - \pi_j) \right| +
+				\left| \sum_{v = N+1}^{n} \sum_{k \in C'} \pi_{ik}^{(v)}(C) (P_{kj}^{(n-v)} - \pi_j) \right| +
+				\left| \sum_{v = 1}^{n} \sum_{\substack{k \in C \\ k \notin C'}} \pi_{ik}^{(v)}(C) P_{kj}^{(n-v)} \right| \stackrel{(5)}{\le}
 			\\
-			\le & \left| \sum_{v = 1}^{N} \sum_{k \in C'} \pi_{ik}^v (p_{kj}^{(n-v)} - \pi_j) \right| \stackrel{(6)}{<} \epsilon
+			\le & \left| \sum_{v = 1}^{N} \sum_{k \in C'} \pi_{ik}^v (P_{kj}^{(n-v)} - \pi_j) \right| \stackrel{(6)}{<} \epsilon
 		\end{split}\end{equation}
 		where
 		\begin{itemize}
@@ -408,7 +408,7 @@
 			\item [(3)] the first sum over all $n \in \mathbb{N}$ is splitted using $N$
 			\item [(4)] the module of a sum is less or equal than the sum of the modules
 			\item [(5)] asd
-			\item [(6)] since $\pi_j = \lim_{n \to +\infty} p_{kj}^{(n-v)}$ by definition, what we have here is a finite sum (over $N$ and $C'$) of an infinitesimal
+			\item [(6)] since $\pi_j = \lim_{n \to +\infty} P_{kj}^{(n-v)}$ by definition, what we have here is a finite sum (over $N$ and $C'$) of an infinitesimal
 		\end{itemize}
 		This way we have verified that first term of \ref{eq:theorem_3.1_thesis} is in fact infinitesimal.
 
@@ -447,10 +447,10 @@
 	\begin{proof}
 		Labeling \gls{mc} states from $1$ to $N$, we can always write that
 
-		$$ \forall i, n ~ \sum_{j=0}^N p_{ij}^{(n)} = 1$$
+		$$ \forall i, n ~ \sum_{j=0}^N P_{ij}^{(n)} = 1$$
 
 		This holds for each value of $n$, so it must be true also in the limit.
-		$$ 1 = \lim_{n \to +\infty} \sum_{j=0}^N p_{ij}^{(n)} \stackrel{(*)}{=} \sum_{j=0}^N \lim_{n \to +\infty} p_{ij}^{(n)}
+		$$ 1 = \lim_{n \to +\infty} \sum_{j=0}^N P_{ij}^{(n)} \stackrel{(*)}{=} \sum_{j=0}^N \lim_{n \to +\infty} P_{ij}^{(n)}
 		= \sum_{j=0}^N \pi_j $$
 		where passage marked with the (*) is possible only because sum is finite.
 
@@ -471,16 +471,16 @@
 		So a null recurrent class cannot exist in a finite \gls{mc}.
 	\end{proof}
 
-	\begin{lemma}
+	\begin{lemma}[Ross 2, pg. 78-82] \label{lemma:MC_irreducible_fi0}
 		Given an \gls{mc} with a state set $S$ that contains state 0, it is irreducible if and only if
 
-		$$ \forall i \neq 0, f_{i\,0} = 1 $$
-		where $f_{i~0}$ is the probability of reaching state $j$ starting from 0 at any time in the future.
+		$$ \forall i \neq 0, f_{i 0} = 1 $$
+		where $f_{i 0}$ is the probability of reaching state $j$ starting from 0 at any time in the future.
 	\end{lemma}
 	---
 	\begin{proof} \emph{if implication} $"\Leftarrow"$
 		\begin{equation}\begin{split}
-			f_{00} = p_{00} + \sum_{i \neq 0} p_{0i} f_{i\,0} \stackrel{(*)}{=} \sum_{i} p_{0i} = 1
+			f_{00} = P_{00} + \sum_{i \neq 0} P_{0i} f_{i 0} \stackrel{(*)}{=} \sum_{i} P_{0i} = 1
 		\end{split}\end{equation}
 		where (*) is due to hypothesis.
 
@@ -494,9 +494,9 @@
 		If \gls{mc} is irreducible (i.e. it is made only of a single class) it must be that
 		$$ \forall i \neq 0, \exists m : P_{0i}^{(m)} > 0 $$
 
-		Let $n$ be the minimun value for given state $i \neq 0$: such number is the shortest path from 0 to $i$ and, by its definition, does not cross state 0 in the middle.
+		Let $n$ be the minimum value among all possible $m$  that satisfies this condition for given state $i \neq 0$: such number is the shortest path from 0 to $i$ and, by its definition, does not cross state 0 in the middle.
 
-		$$ \mathbb{P}[\forall X_n \neq 0 | X_0 = 0] = 1 - f_{00} \stackrel{(*)}{\ge} P_{0i}^{(n)} (1 - f_{i0}) > 0 \Rightarrow \text{ state 0 is transient} $$
+		$$ \mathbb{P}[\forall n, X_n \neq 0 | X_0 = 0] = 1 - f_{00} \stackrel{(*)}{\ge} P_{0i}^{(n)} (1 - f_{i0}) > 0 \Rightarrow \text{ state 0 is transient} $$
 
 		where (*) inequality holds because leaving 0 forever (first term) is a more general case of going to state $i$ via the shortest path and then not crossing 0 ever again.
 
@@ -504,71 +504,84 @@
 	\end{proof}
 
 	\begin{definition}
-		Given an \gls{mc} with a state set $S = 1, 2, ...$,
+		Given an \gls{mc} with a state set $S = \{1, 2, ...\}$, quantity $Y_i(n)$ is defined as the probability of staying in $S$ along an $n$-steps path that starts from $i \in S$.
 
-		$$ Y_i(n) = \mathbb{P}[\text{staying in S} | \text{starting in S}] = \mathbb{P}[X_j \in S ~\forall j=1, 2, ..., n | X_0 = i \in S] $$
+		$$ Y_i(n) = \mathbb{P}[X_j \in S ~\forall j=1, 2, ..., n | X_0 = i \in S] $$
 	\end{definition}
 
 	\begin{theorem}
-		$Y_i(n)$ is monothonically nonincreasing on $n$.
+		$Y_i(n)$ is monothonically non-increasing on $n$.
 		$$ Y_i(n) \le Y_i(n-1) $$
 	\end{theorem}
 	---
 	\begin{proof} Base case $n=1$
-		\begin{equation}\begin{split}
-			& Y_i(1) = \mathbb{P}[X_1 \in S | X_0 = i] = \sum_{j \in S} p_{ij} \\
-			& Y_i(2) \stackrel{(*)}{=} \sum_{j \in S} p_{ij} Y_i(1) \le \sum_{j \in S} p_{ij} = Y_i(1)
+		\begin{equation}\begin{split} \label{eq:Y_i-properties}
+			& Y_i(1) = \mathbb{P}[X_1 \in S | X_0 = i] = \sum_{j \in S} P_{ij} \\
+			& Y_i(2) \stackrel{(*)}{=} \sum_{j \in S} P_{ij} Y_i(1) \le \sum_{j \in S} P_{ij} = Y_i(1)
 		\end{split}\end{equation}
-		where (*) holds by \emph{first step analysis}: $ Y_i(n) = \sum_{j \in S} p_{ij} Y_j(n-1) $.
+		where (*) holds by \emph{first step analysis}: $ Y_i(n) = \sum_{j \in S} P_{ij} Y_j(n-1) $.
 	\end{proof}
 
 	\begin{proof} Inductive step
 		\begin{equation}\begin{split}
-			& Y_i(n+1) \stackrel{(1)}{=} \sum_{j \in S} p_{ij} Y_i(n) \stackrel{(2)}{\le} \sum_{j \in S} p_{ij} Y_i(n-1) \stackrel{(3)}{=} Y_i(n)
+			& Y_i(n+1) \stackrel{(1)}{=} \sum_{j \in S} P_{ij} Y_i(n) \stackrel{(2)}{\le} \sum_{j \in S} P_{ij} Y_i(n-1) \stackrel{(3)}{=} Y_i(n)
 		\end{split}\end{equation}
 		where (1) and (3) hold by first step analysis and (2) for inductive hypothesis.
 	\end{proof}
 
 	\begin{lemma}
-		Since $Y_i(n)$ is monothonically nonincreasing and positive, since it is a probability, we can always take the limit for $n \to +\infty$.
-		$$ \exists \lim_{n \to +\infty} Y_i(n) \stackrel{.}{=} Y_i $$
+		Since $Y_i(n)$ is monothonically non-increasing and positive (it is a probability), we can always take the limit for $n \to +\infty$.
 
-		Using \emph{first step analysis}, we can build the following system, always for $n \to +\infty$.
+		$$ \exists \lim_{n \to +\infty} Y_i(n) \stackrel{.}{=} Y_i = \mathbb{P}[\text{staying in } S | \text{starting from } i \in S] $$
+		where $ S = \{ 1, 2, 3, ...\} $ as before.
+
+		Using \emph{first step analysis} as in previous equation \ref{eq:Y_i-properties} and taking the limit for $n \to +\infty $, we can build the following system.
 		\begin{equation} \label{eq:Yj_system}
-			\forall i \neq 0, Y_i = \sum_{j \in S} p_{ij} Y_j
+			\forall i \neq 0, Y_i = \sum_{j \in S} P_{ij} Y_j
 		\end{equation}
 	\end{lemma}
 
 	\begin{lemma}
-		Let $\left\{ Z_i \right\}_{i=1, 2, ...}$ be a solution set for system \ref{eq:Yj_system}.
+		Let $\{Z_i, i=1, 2, ...\}$ be a solution set for system \ref{eq:Yj_system}. We focus in particular on non-divergent solutions, imposing that $ \forall i, |Z_i| \le 1 $.
 
-		It must be that
+		It holds that
 		$$ \forall n, |Z_i| \le Y_i(n) ~ \Rightarrow ~|Z_i| \le \lim_{n \to +\infty} Y_i(n) = Y_i $$
 	\end{lemma}
 	---
 	\begin{proof} Base case $n=1$
-		$$ |Z_i| = \sum_{j \in S} p_{ij} |Z_i| \stackrel{(*)}{\le} \sum_{j \in S} p_{ij} = Y_i(1) $$
+		$$ |Z_i| = \sum_{j \in S} P_{ij} |Z_j| \stackrel{(*)}{\le} \sum_{j \in S} P_{ij} = Y_i(1) $$
 		where (*) holds because $|Z_i| < 1$.
 	\end{proof}
 
 	\begin{proof} Inductive step
-		$$ |Z_i| = \sum_{j \in S} p_{ij} |Z_i| \stackrel{(*)}{\le} \sum_{j \in S} p_{ij} Y_i(n) = Y_i(n) $$
+		$$ |Z_i| = \sum_{j \in S} P_{ij} |Z_j| \stackrel{(*)}{\le} \sum_{j \in S} P_{ij} Y_j(n) = Y_i(n+1) $$
 		where (*) is due to the inductive hypothesis.
 	\end{proof}
 
 	\begin{theorem}
 		An irreducible \gls{mc} with states $S = 0, 1, 2, ...$ is transient if and only if
 
-		$$ Z_i = \sum_{j=1}^{+\infty} p_{ij} Z_j \text{ for } i = 1, 2, ...$$
+		$$ Z_i = \sum_{j=1}^{+\infty} P_{ij} Z_j \text{ for } i = 1, 2, ...$$
 
 		has a non-zero bounded solution with $ |Z_i| \le 1$.
 	\end{theorem}
 	---
-	\begin{proof} ???
-		Let's consider a \gls{mc} and a set subset $C = {1, 2, 3, ...}$.
+	\begin{proof}
+		Let's consider a \gls{mc} and a state subset $S = \{1, 2, 3, ...\}$.
 
-		$$ \mathbb{P}[\text{leaving } S| X_0 = i \neq 0] = 1 - Y_i = f_{i0} $$
+		$$ \mathbb{P}[\text{leaving } S| X_0 = i \neq 0] \stackrel{(1)}{=}
+			1 - Y_i \stackrel{(2)}{=} f_{i0} $$
+		where (1) holds for $Y_i$ definition and (2) because, for $S$ formulation, leaving $S$ means reaching 0.
 
+		We can now distinguish two cases, based on $Z_i$ solutions:
+		\begin{itemize}
+			% Z has only at most zero solutons
+			\item $ \forall i, Z_i \le 0 \Leftrightarrow \forall i, Y_i = 0 \Leftrightarrow \forall i, f_{i0} = 1 \stackrel{(*)}{\Leftrightarrow} $ chain is recurrent
+
+			% Z has a non zero bounded solution
+			\item $ \exists i: Z_i > 0 \Leftrightarrow \exists i: Y_i > 0 \Leftrightarrow \exists i: f_{i0} < 1 \stackrel{(*)}{\Leftrightarrow} $ chain is transient
+		\end{itemize}
+		where (*) holds for theorem \ref{lemma:MC_irreducible_fi0}.
 	\end{proof}
 
 	\begin{theorem}[4.2, KT p. 95]
@@ -577,7 +590,7 @@
 		\begin{equation}\begin{split}
 			& \exists \text{ a sequence } Y_i \text{, for } i = 1,\,... :\\
 			& \begin{dcases}
- 				& \sum_{j=0}^{+\infty} p_{ij} Y_j \le Y_i 	~~ \forall i \neq 0 \\
+ 				& \sum_{j=0}^{+\infty} P_{ij} Y_j \le Y_i 	~~ \forall i \neq 0 \\
  				& \lim_{i \to +\infty} Y_i = +\infty		~~ \forall i
 			\end{dcases}
 		\end{split}\end{equation}
@@ -586,30 +599,28 @@
 	\begin{proof}
 		Proof is splitted into small chunks, as usual.
 
-		Part 1.
-		Let's consider a \gls{mc} with probability matrix $\tilde{P}$, that concides with P except for the first line, which is $(1, 0, 0, ...)$.
+		\begin{enumerate}
+		\item Let's consider a \gls{mc} with probability matrix $\tilde{P}$, that concides with P except for the first line, which is $(1, 0, 0, ...)$.
 		This way we make the state 0 absorbing.
 
-		We employ this trick to write both theorem conditions also for $i=0$.
-		$$ \sum_{j=0}^{+\infty} p_{ij} Y_j \le Y_i ~~ \forall i \ge 0 $$
+		We employ this trick to write theorem condition also for $i=0$.
+		$$ \sum_{j=0}^{+\infty} \tilde{P}_{ij} Y_j \le Y_i ~~ \forall i$$
 
-		Part 2.
-		If a given sequence $Y_i$ is a solution, $\forall b$ its shifted version $y_i + b$ is a solution too.
+		\item If a given sequence $Y_i$ is a solution, its shifted version $y_i + b$ is a solution too, for all $b$.
 
 		Since $Y_i$ sequence diverges, we can choose a suitable $b$ that makes each member strictly positive.
 		\begin{equation}
-			\exists b: \forall i, Y_i + b \doteq y_i' > 0 \text{ is a valid solution.}
+			\exists b: \forall i, Y_i + b \doteq Y_i' > 0 \text{ is a valid solution.}
 		\end{equation}
 
 		From now on, we consider only positive sequences $Y_i$.
 
-		Part 3.
-		\begin{equation}\begin{split}
-			\forall i, ~ Y_i & \ge \sum_{j=0}^{+\infty} \tilde{p}_{ij} Y_j \stackrel{(1)}{\ge}
-			\sum_{j=0}^{+\infty} \tilde{p}_{ij} \left( \sum_{k=0}^{+\infty} \tilde{p}_{ik} Y_k \right) \stackrel{(2)}{=} \\
-			& = \sum_{k=0}^{+\infty} Y_k \sum_{j=0}^{+\infty} \tilde{p}_{ij}  \tilde{p}_{ik} =
-			\sum_{k=0}^{+\infty} Y_k \tilde{p}_{ij}^{(2)} = \\
-			& \stackrel{(3)}{=} \ldots = \sum_{k=0}^{+\infty} Y_k \tilde{p}_{ij}^{(m)} \forall m
+		\item \begin{equation}\begin{split}
+			\forall i, ~ Y_i & \ge \sum_{j=0}^{+\infty} \tilde{P}_{ij} Y_j \stackrel{(1)}{\ge}
+			\sum_{j=0}^{+\infty} \tilde{P}_{ij} \left( \sum_{k=0}^{+\infty} \tilde{P}_{ik} Y_k \right) \stackrel{(2)}{=} \\
+			& = \sum_{k=0}^{+\infty} Y_k \sum_{j=0}^{+\infty} \tilde{P}_{ij}  \tilde{P}_{ik} =
+			\sum_{k=0}^{+\infty} Y_k \tilde{P}_{ij}^{(2)} = \\
+			& \stackrel{(3)}{=} \ldots = \sum_{k=0}^{+\infty} Y_k \tilde{P}_{ij}^{(m)} \forall m
 		\end{split}\end{equation}
 		where
 		\begin{itemize}
@@ -618,62 +629,67 @@
 			\item [(3)] the same reasoning of (2) is repeated in a recursive way.
 		\end{itemize}
 
-		Part 4.
+		\item
 		Since $Y_i$ serie diverges, we can write, by limit definition
 		$$ \forall \epsilon > 0, \exists M \in \mathbb{N} : Y_i \ge 1 / \epsilon ~ \forall i \ge M$$
 
 		\begin{equation}\begin{split}
-			\forall i, \forall m, ~ Y_i & \ge \sum_{k=0}^{+\infty} Y_k \tilde{p}_{ij}^{(m)}
-				= \sum_{k=0}^{M-1} Y_k \tilde{p}_{ij}^{(m)}
-				+ \sum_{k=M}^{+\infty} Y_k \tilde{p}_{ij}^{(m)} \ge \\
-			& \ge \sum_{k=0}^{M-1} Y_k \tilde{p}_{ij}^{(m)}
-				+ \frac{1}{\epsilon} \sum_{k=M}^{+\infty} \tilde{p}_{ij}^{(m)} \\
-			& = \sum_{k=0}^{M-1} Y_k \tilde{p}_{ij}^{(m)}
-				+ \frac{1}{\epsilon} \left( 1 - \sum_{k=0}^{M-1} Y_k \tilde{p}_{ij}^{(m)} \right) \\
+			\forall i, \forall m, ~ Y_i & \ge \sum_{k=0}^{+\infty} Y_k \tilde{P}_{ij}^{(m)}
+				= \sum_{k=0}^{M-1} Y_k \tilde{P}_{ij}^{(m)}
+				+ \sum_{k=M}^{+\infty} Y_k \tilde{P}_{ij}^{(m)} \ge \\
+			& \ge \sum_{k=0}^{M-1} Y_k \tilde{P}_{ij}^{(m)}
+				+ \frac{1}{\epsilon} \sum_{k=M}^{+\infty} \tilde{P}_{ij}^{(m)} \\
+			& = \sum_{k=0}^{M-1} Y_k \tilde{P}_{ij}^{(m)}
+				+ \frac{1}{\epsilon} \left( 1 - \sum_{k=0}^{M-1} Y_k \tilde{P}_{ij}^{(m)} \right) \\
 		\end{split}\end{equation}
 
-		Part 5.
+		\item
 		Our aim is now to prove following statement
-		$$ \forall j \neq 0, \lim_{m \to \infty} \tilde{p}_{ij}^{(m)} = 0 $$
+		$$ \forall j \neq 0, \lim_{m \to \infty} \tilde{P}_{ij}^{(m)} = 0 $$
 
 		We can distinguish two cases,
 		\begin{itemize}
 			\item if $P$ is recurrent, we certantly reach state 0 at some time ($f_{i0} = 1$), but given $\tilde{P}$ strucure we will be stuck there forever.
-			\item if $P$ is transient, it must be that $\lim_{m \to \infty} p_{ij}^{(m)} = 0 $, so our lemma would be proven if
-			$$ \forall i, j \neq 0, ~ \tilde{p}_{ij}^{(m)} \le p_{ij}^{(m)} $$
+			\item if $P$ is transient, it must be that $\lim_{m \to \infty} P_{ij}^{(m)} = 0 $, so our lemma would be proven if
+			$$ \forall i, j \neq 0, ~ \tilde{P}_{ij}^{(m)} \le P_{ij}^{(m)} $$
 		\end{itemize}
 
-		Last possibility can be more widely explained this way, where $\tilde{p}_{ij}^{(m)}$ and $p_{ij}^{(m)}$ are splitted across paths that contain state 0 or not.
+		This possibility can be more widely explained this way, splitting $\tilde{P}_{ij}^{(m)}$ and $P_{ij}^{(m)}$ across random walks	 that contain state 0 or not.
 		\begin{equation}
 			\left\{ \begin{split}
-				& p_{ij}^{(m)} = \sum_{l=1}^{m-1} f_{i0}(l) p_{0j}^{(m-l)} +
-					& \mathbb{P}[X_m = j, X_l \neq 0 \forall l = 1, ..., m-1 | X_0 = i] \\
-				& \tilde{p}_{ij}^{(m)} =
-					& \mathbb{P}[X_m = j, X_l \neq 0 \forall l = 1, ..., m-1 | X_0 = i] \\
+				& P_{ij}^{(m)} = \sum_{l=1}^{m-1} f_{i0}(l) P_{0j}^{(m-l)} +
+					& \mathbb{P}[X_m = j, X_l \neq 0 ~ \forall l = 1, ..., m-1 | X_0 = i] \\
+				& \tilde{P}_{ij}^{(m)} =
+					& \mathbb{P}[X_m = j, X_l \neq 0 ~ \forall l = 1, ..., m-1 | X_0 = i] \\
 			\end{split} \right.
 		\end{equation}
-		Note that in $\tilde{P}$ 0 is a trap state, so the first term of the sum disappear because $j \neq 0$ can no more be reached.
+		Note that, in $\tilde{P}$, state $0$ is a trap state, so the first term of the sum disappear because $j \neq 0$ can no more be reached.
 
-		Part 6.
-		Now we assume that chain is transient and we proceed to an absurd statement, which proves our theorem.
+		\item
+		Now we assume that chain is transient? and we proceed to an absurd statement, which proves our theorem.
 
 		By definition,
-		$$ f_{i0} = \lim_{m \to +\infty} \tilde{p}_{i0}^{(m)} = \mathbb{P}[\exists k : X_k = 0 | X_0 = i] = \tilde{\pi}_i(C_0)$$
+		$$ f_{i0} = \lim_{m \to +\infty} \tilde{P}_{i0}^{(m)} = \mathbb{P}[\exists k : X_k = 0 | X_0 = i] = \tilde{\pi}_i(C_0)$$
 		where $C_0$ is the class that contains only state 0.
 
-		For what has been proved in Part 4,
-		\begin{equation}
-			\begin{split}
-				\lim_{m \to +\infty} Y_i & =
-					\lim_{m \to +\infty} \left[ \sum_{k=0}^{M-1} Y_k \tilde{p}_{ij}^{(m)}
-						+ \frac{1}{\epsilon} \left( 1 - \sum_{k=0}^{M-1} Y_k \tilde{p}_{ij}^{(m)} \right) \right] \stackrel{(*)}{s} \\
-				& = \tilde{\pi}_i(C_0) Y_0 + \frac{1}{\epsilon} \left( 1 - \tilde{\pi}_i(C_0) \right) \forall \epsilon > 0
-			\end{split}
-		\end{equation}
-		where (*) holds because 0 is a trap state, so for $m \to +\infty$ only paths ending in that state have a non-zero probability of being taken.
+		For what has been proved previously,
+		\begin{equation}\begin{split}
+			Y_i & = \lim_{m \to +\infty} Y_i = \\
+				& = \lim_{m \to +\infty} \left[ \sum_{k=0}^{M-1} Y_k \tilde{P}_{ij}^{(m)}
+					+ \frac{1}{\epsilon} \left( 1 - \sum_{k=0}^{M-1} Y_k \tilde{P}_{ij}^{(m)} \right) \right] \stackrel{(*)}{=} \\
+			& = \tilde{\pi}_i(C_0) Y_0 + \frac{1}{\epsilon} \left( 1 - \tilde{\pi}_i(C_0) \right) ~ \forall \epsilon > 0
+		\end{split}\end{equation}
+		where (*) holds because 0 is a trap state for $\tilde{P}$, so for $m \to +\infty$ only paths ending in that state have a non-zero probability of being taken.
 
-		This proves that
-		$$ \forall \epsilon>0, 1 - \tilde{\pi}_i(C_0) \le \epsilon \left( Y_i - \tilde{\pi}_i(C_0) Y_0 \right) \le \epsilon Y_i$$
-		$$ \lim_{\epsilon \to 0^{+}} \epsilon Y_i = 0 = 1 - \tilde{\pi}_i(C_0) \Rightarrow \tilde{\pi}_i(C_0) = f_{i0} = 1$$
-		which is an absurd (why?) so chain must be recurrent.
+		Terms can be rearranged this way
+
+		\begin{equation*}\begin{split}
+			\forall \epsilon > 0, ~ & Y_i - \tilde{\pi}_i(C_0) Y_0 = \frac{1}{\epsilon} \left( 1 - \tilde{\pi}_i(C_0) \right) \\
+			& \epsilon \, [Y_i - \tilde{\pi}_i(C_0) Y_0] = 1 - \tilde{\pi}_i(C_0)
+		\end{split}\end{equation*}
+
+		Since previous relation holds $\forall \epsilon > 0$ and all terms are numbers (no functions), we can freely take the limit for $\epsilon \to 0$.
+		$$ 1 - \tilde{\pi}_i(C_0) = \lim_{\epsilon \to 0^{+}} \epsilon \, [Y_i - \tilde{\pi}_i(C_0) Y_0] = 0 \Rightarrow \tilde{\pi}_i(C_0) = f_{i0} = 1$$
+		which implies that \gls{mc} is recurrent for lemma \ref{lemma:MC_irreducible_fi0}.
+		\end{enumerate}
 	\end{proof}
