Added final remark to proof for th:finite_MC_1

--- a/network_modeling/chapter_2.tex
+++ b/network_modeling/chapter_2.tex
@@ -518,6 +518,7 @@ Let $\rho=\sum\limits_{k=0}^{+\infty} k \cdot a_k$. We say that for
 		where passage marked with the (*) is possible only because sum is finite.
 
 		Since the sum of the $\pi_j$ is not zero, one of them must be strictly positive.
+		Corresponding state is then positive recurrent, proving our theorem.
 	\end{proof}
 
 	\begin{theorem}[Property of finite \gls{mc}]
