--- a/network_modeling/chapter_2.tex
+++ b/network_modeling/chapter_2.tex
@@ -394,15 +394,14 @@ Let $\rho=\sum\limits_{k=0}^{+\infty} k \cdot a_k$. We say that for
 	\end{proof}
 
 	\begin{definition}[lesson 22/03/17] \label{def:falling_probability}
-
 		Given a recurrent class $C$ and atransient state $i \notin C$, the probability of entering in that class through state $k \in C$ at step $n$ can be written as
-		$$ \Pi_{ik}^{n}(C) = \prob[X_n = k \in C, x_l \notin C ~ \forall l=1, ..., n-1 | X_0 = i] $$
+		$$ \pi_{ik}^{(n)}(C) = \prob[X_n = k \in C, x_l \notin C ~ \forall l=1, ..., n-1 | X_0 = i] $$
 
 		Thus, the probability that the chain, starting from $i$, reaches class $C$ at step $n$ is
-		$$ \pi_{i}^{n}(C) = \sum_{k \in C} \Pi_{ik}^{n}(C) $$
+		$$ \pi_{i}^{(n)}(C) = \sum_{k \in C} \pi_{ik}^{(n)}(C) $$
 
 		and the general probability of reaching $C$ starting from $i$ is
-		$$ \pi_i(C) = \sum_{n \in \mathbb{N}} \pi_i^{n}(C) $$
+		$$ \pi_i(C) = \sum_{n \in \mathbb{N}} \pi_i^{(n)}(C) $$
 	\end{definition}
 
 	\begin{theorem}[3.1, KT p. 91] \label{th:3.1}
