--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -66,6 +66,7 @@
 \newcommand{\Tab}[1]{Tab.~\ref{#1}}
 \newcommand{\Sec}[1]{Sec.~\ref{#1}}
 \newcommand{\indep}{\mathrel{\perp\mspace{-10mu}\perp}}
+\newcommand{\RN}[1]{ \textup{\uppercase\expandafter{\romannumeral#1}}} %This is for inserting Roman Numbers (useful for \stackrel in equations so that you don't confuse indicating numbers from equation numbers
 
 %---------------------------------
 
